Corrected nav and footer alignment when screen width shrinks

--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ a:hover {
     text-decoration: underline;
 }
 
-
 .page {
     display: flex;
     flex-direction: column;
@@ -24,6 +23,8 @@ a:hover {
     display: flex;
     padding: 12px;
     align-items: center;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 
 .nav-link {
@@ -46,8 +47,10 @@ a:hover {
     text-decoration: none;
 }
 
-.shove-right {
-    margin-left: auto;
+@media only screen and (min-width: 800px) {
+    .shove-right {
+        margin-left: auto;
+    }
 }
 
 .main {
@@ -59,6 +62,7 @@ a:hover {
 .search-button {
     display: inline-block;
     padding: 8px;
+    margin: 12px;
     color: #222;
     background-color: rgb(247, 247, 247);
     border-radius: 4px;
@@ -69,12 +73,27 @@ a:hover {
 }
 .footer {
     display: flex;
-    padding: 12px;
+    position: absolute;
+    bottom: 0;
+    flex-wrap: wrap;
+    width: 100%;
+    border-top: 1px solid rgb(199, 199, 199);
     align-items: center;
+    justify-content: space-evenly;
     background-color: rgb(247, 247, 247);
+}
+
+.footer-div-left {
+    align-self: flex-start;
+}
+
+@media only screen and (min-width: 800px) {
+    .footer-div-right {
+        margin-left: auto;
+    }
 }
 
 .footer-link {
     display: inline-block;
-    padding: 12px;
+    padding: 20px;
 }
